# OpenCV_Learning

./: CMakeLists.txt  README.md
src/: add.cpp  draw.cpp  read.cpp  video.cpp
